--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-api",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "Api service for angular to work with REST resources",
   "main": "dist/angular2-api.js",
   "scripts": {
@@ -26,35 +26,37 @@
   },
   "homepage": "https://github.com/MikaAK/angular2-api#readme",
   "devDependencies": {
-    "angular2": "^2.0.0-beta.7",
-    "babel-core": "^6.5.2",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/http": "^2.0.0-rc.1",
+    "babel-core": "^6.8.0",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "babel-register": "^6.5.2",
+    "babel-register": "^6.8.0",
     "dts-generator": "^1.6.3",
     "es6-promise": "^3.1.2",
-    "es6-shim": "^0.34.4",
+    "es6-shim": "^0.35.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
-    "karma-cli": "^0.1.2",
-    "karma-jasmine": "^0.3.7",
+    "karma-cli": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.24",
+    "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
-    "phantomjs-polyfill": "0.0.1",
-    "phantomjs-prebuilt": "^2.1.4",
+    "phantomjs-polyfill": "^0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.2",
-    "ts-loader": "^0.8.1",
-    "typescript": "^1.7.5",
-    "typings": "^0.6.8",
-    "webpack": "^1.12.13",
-    "zone.js": "^0.5.15"
+    "rxjs": "^5.0.0-beta.6",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typings": "^0.8.0",
+    "webpack": "^1.13.0",
+    "zone.js": "^0.6.6"
   },
   "peerDependencies": {
-    "rxjs": "^5.0.0-beta.2",
-    "angular2": "^2.0.0-beta.7"
+    "rxjs": "^5.0.0-beta.6",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/http": "^2.0.0-rc.1"
   }
 }
